<resources>
    <string name="app_name">Aisle Challenge</string>
    <string name="get_otp">Get OTP</string>
    <string name="continue_text">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_messages_to_you">Personal messages to you</string>
    <string name="tap_to_review_50_notes">Tap to review 50+ notes</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="discover">Discover</string>
    <string name="notes">Notes</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="upgrade">Upgrade</string>
    <string name="premium_upgrade">Premium members can<br />view all their likes at once</string>
    <string name="enter_otp">Enter The<br />OTP</string>
    <string name="_9999">9999</string>
    <string name="enter_phone">Enter Your<br />Phone Number</string>
    <string name="_91">+91</string>
    <string name="_9876543210">9876543210</string>
    <string name="resend">Resend</string>
</resources>