<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PhoneNumberFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:paddingTop="80dp"
        tools:context=".activity.MainActivity">

        <ProgressBar
            android:id="@+id/phone_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/get_otp_text_view"
            style="@style/SemiBoldTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_otp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_ph_num_text_view"
            style="@style/BoldTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Enter Your\nPhone Number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_otp_text_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_code_edit_text"
            style="@style/BoldTextViewTheme"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/grey_round_corners"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/_91"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_ph_num_text_view" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_edit_text"
            style="@style/BoldTextViewTheme"
            android:layout_width="147dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/grey_round_corners"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/_9876543210"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/country_code_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/enter_ph_num_text_view" />

        <Button
            android:id="@+id/continue_button"
            style="@style/BoldTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/yellow_round_bg"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_code_edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>